First China Lotgen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,8 +29,7 @@
     <string name="google_banner_id">ca-app-pub-5187489598351901~6344213310</string>
     <string name="interstitial_ad_unit_id">ca-app-pub-5187489598351901/8232010054</string>
 
-    <string name="app_Google_Play_links">https://goo.gl/YBkc4Y</string>
-    <string name="app_OneStore_links">https://goo.gl/GdGXVM</string>
+    <string name="app_Google_Play_links">https://gotopark.page.link/81nF</string>
     <string name="mdct_links">http://gotopark.blogspot.kr/</string>
 
 
