First China Lotgen select manual number

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
     <string name="scr_text1">❤ 好运的数量 ❤</string>
     <string name="scr_text2">❤ 恭喜发财！❤</string>
     <string name="sw1_text1">总体/平均</string>
-    <string name="sw2_text2">单击/自动点击</string>
+    <string name="sw2_text2">单击/接连</string>
     <string name="Popup_Mesg1">恭喜发财~ 你想要退出吗？</string>
     <string name="Popup_Mesg2">您可以通过按住来删除该号码.</string>
 
