First China Lotgen select manual number

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">中国乐透</string>
+    <string name="app_name">中国双色球</string>
     <string name="action_settings">Settings</string>
 
     <string name="info_net1">!发生了沟通问题!</string>
